tests/miniJava/neg/000181_mutation.MiniJava
class java { public static Main void Main ( String [ ] java ) { { } } }
